--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,24 +4,12 @@
 #
 
 # We need to explicitly specify resolver 2.
-# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, however if you
-# remove this, `getrandom` will fail trying to find `std` when building `mc-sgx-core-types`.  This is because
-# `mc-sgx-core-types` uses `rand` in it's `dev-dependencies`.  `rand` will use the `std` feature of `getrandom`, however
-# being in `dev-dependencies` it shouldn't normally get pulled in during a build.
-# Even specifying `edition = "2021"` here will not fix this
+# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
 resolver = "2"
 edition = "2021"
 
-[profile.dev]
-opt-level = 0
-lto = "thin"
-
 [profile.release]
-opt-level = 3
-rpath = false
 lto = "thin"
-debug-assertions = false
-overflow-checks = false
 
 [workspace.metadata.release]
 shared-version = true
