--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xt0rted/markdownlint-problem-matcher@v2
       - uses: DavidAnson/markdownlint-cli2-action@v7
-        with:
-          globs: "**/*.md"
 
   deny:
     runs-on: ubuntu-20.04
@@ -91,7 +89,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all --all-features --locked -- -D warnings
+          args: --all --all-features -- -D warnings
 
   build:
     runs-on: ubuntu-20.04
@@ -115,7 +113,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --locked
+          args: --release
 
   test:
     runs-on: ubuntu-20.04
@@ -139,7 +137,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --release --locked
+          args: --release
 
   doc:
     runs-on: ubuntu-20.04
@@ -162,7 +160,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --release --locked --no-deps --features sim
+          args: --release --no-deps
 
   coverage:
     runs-on: ubuntu-20.04
@@ -195,7 +193,6 @@ jobs:
       - sort
       - clippy
       - build
-      - build-no-alloc
       - test
       - doc
       - coverage
