Move panic to panic/abort
Update the panic crate to be a panic abort crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 members = [
     "alloc",
-    "panic",
+]
+exclude = [
+    "panic/abort",
 ]
 
 # We need to explicitly specify resolver 2.
