--- a/panic/abort/Cargo.toml
+++ b/panic/abort/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mc-sgx-panic"
+name = "mc-sgx-panic-abort"
 version = "0.1.0"
 edition = "2021"
 authors = ["MobileCoin"]
@@ -7,8 +7,11 @@ rust-version = "1.62.1"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/mobilecoinfoundation/sgx-std"
-description = "Panic handler for SGX enclave"
+description = "Panic handler for SGX enclaves that aborts"
 categories = ["hardware-support", "no-std"]
 keywords = ["sgx", "no-std", "panic"]
 
 [dependencies]
+# To get link in the abort() function
+mc-sgx-trts-sys = "0.3.0"
+
