--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - uses: actions/add-to-project@v0.4.0
         with:
+          github-token: "${{ secrets.ADD_TO_PROJECT_PAT }}"
           project-url: https://github.com/orgs/mobilecoinfoundation/projects/5
-          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
 
   size-label:
     runs-on: ubuntu-latest
