Add untrusted side of stderr from enclave
Add an ocall implementation `ocall_stderr()` which is where stderr from
an enclave will be directed to. By default any content passed to the
`ocall_stderr()` will be directed to the untrusted (host) stderr.
Consumers of the crate can direct this output by providing a `WritAll`
implementation to `stderr_write_all()`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [workspace]
 members = [
     "alloc",
+    "io/untrusted",
 ]
 exclude = [
     "panic/abort",
+    "test_enclave",
 ]
 
 # We need to explicitly specify resolver 2.
