--- a/deny.toml
+++ b/deny.toml
@@ -36,6 +36,11 @@ deny = [
     # https://github.com/briansmith/ring/issues/774
     { name = "ring" },
 ]
+skip = [
+    # Workaround for path only dependencies,
+    # https://github.com/EmbarkStudios/cargo-deny/issues/241
+    { name = "mc-sgx-io-untrusted" },
+]
 skip-tree = [ ]
 
 [sources]
