--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,30 +13,25 @@ env:
 
 jobs:
   rustfmt:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: stable
-          profile: minimal
           components: rustfmt
-          override: true
+          toolchain: nightly-2022-07-22
       - uses: r7kamura/rust-problem-matchers@v1
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+      - run: cargo fmt --all -- --check
 
   markdown-lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: xt0rted/markdownlint-problem-matcher@v2
       - uses: DavidAnson/markdownlint-cli2-action@v8
 
   deny:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
@@ -54,130 +49,93 @@ jobs:
         command: check ${{ matrix.checks }}
 
   sort:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: stable
-          profile: minimal
-      - uses: actions-rs/install@v0.1
-        with:
-          crate: cargo-sort
-          version: latest
-          use-tool-cache: true
-      # We run this manually because actions-rs/cargo doesn't have output redirect
+          toolchain: nightly-2022-07-22
+      - run: cargo install cargo-sort
       - run: cargo sort --workspace --check >/dev/null
 
   clippy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
-          toolchain: nightly-2022-07-22
           components: clippy
-          override: true
+          toolchain: nightly-2022-07-22
       - uses: r7kamura/rust-problem-matchers@v1
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all --all-features -- -D warnings
+      - run: cargo clippy --all --all-features -- -D warnings
 
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
-    strategy:
-      matrix:
-        rust:
-          - nightly-2022-07-22
     steps:
       - uses: actions/checkout@v3
       - uses: mobilecoinfoundation/actions/sgxsdk@main
-      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
+          version: 2.18.100.3
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2022-07-22
       - uses: r7kamura/rust-problem-matchers@v1
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release
+      - run: cargo build --release
 
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
-    strategy:
-      matrix:
-        rust:
-          - nightly-2022-07-22
     steps:
       - uses: actions/checkout@v3
       - uses: mobilecoinfoundation/actions/sgxsdk@main
-      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
+          version: 2.18.100.3
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2022-07-22
       - uses: r7kamura/rust-problem-matchers@v1
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --release
+      - run: cargo test --release
 
   doc:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
-    strategy:
-      matrix:
-        rust:
-          - nightly-2022-07-22
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
+          toolchain: nightly-2022-07-22
       - uses: r7kamura/rust-problem-matchers@v1
-      - uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --release --no-deps
+      - run: cargo doc --release --no-deps
 
   coverage:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - "rustfmt"
       - "markdown-lint"
     steps:
       - uses: actions/checkout@v3
       - uses: mobilecoinfoundation/actions/sgxsdk@main
-      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: nightly-2022-07-22
-          override: true
+          version: 2.18.100.3
+      - uses: dtolnay/rust-toolchain@master
+        with:
           components: llvm-tools-preview
+          toolchain: nightly-2022-07-22
       - uses: taiki-e/install-action@cargo-llvm-cov
-      - uses: actions-rs/cargo@v1
-        with:
-          command: llvm-cov
-          args: --workspace --lcov --output-path lcov.info
+      - run: cargo llvm-cov --workspace --lcov --output-path lcov.info
       - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
