--- a/io/untrusted/Cargo.toml
+++ b/io/untrusted/Cargo.toml
@@ -21,4 +21,5 @@ mc-sgx-util = "0.4.0"
 once_cell = "1.16.0"
 
 [dev-dependencies]
+serial_test = "0.9.0"
 test_enclave = { path = "../../test_enclave" }
