--- a/panic/abort/Cargo.toml
+++ b/panic/abort/Cargo.toml
@@ -13,5 +13,23 @@ keywords = ["sgx", "no-std", "panic"]
 
 [dependencies]
 # To get link in the abort() function
-mc-sgx-trts-sys = "0.3.0"
+mc-sgx-trts-sys = "0.4.0"
+
+# This is a crate that can only be built for an SGX target, so it's not part of
+# the root workspace. Because of this limitation we must re-iterate the 
+# `cargo release` settings here
+[package.metadata.release]
+shared-version = true
+dev-version-ext = "beta.0"
+consolidate-commits = true
+consolidate-pushes = true
+tag-name = "v{{version}}"
+
+# The file names in this key are relative to the each crate that gets released.
+# So we only need one `README.md` entry if all the README's follow a
+# common format and are always next to the Cargo.toml for their respective
+# package.
+pre-release-replacements = [
+    {file="README.md", search="mc-[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
+]
 
