--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,6 +6,14 @@ updates:
     interval: daily
   open-pull-requests-limit: 25
 
+  # See https://github.com/dependabot/dependabot-core/issues/2824 for doing
+  # multiple directories for the same check.
+- package-ecosystem: cargo
+  directory: "/panic/abort"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 25
+
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
