--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,8 @@ jobs:
           components: rustfmt
       - uses: r7kamura/rust-problem-matchers@v1
       - run: cargo +${{ matrix.rust }} fmt --all -- --check
+      - run: cargo +${{ matrix.rust }} fmt --all -- --check
+        working-directory: panic/abort
 
   markdown-lint:
     runs-on: ubuntu-22.04
@@ -61,6 +63,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: cargo install cargo-sort
       - run: cargo sort --workspace --check >/dev/null
+      - run: cargo sort --workspace --check >/dev/null
+        working-directory: panic/abort
 
   clippy:
     runs-on: ubuntu-22.04
@@ -79,6 +83,8 @@ jobs:
           components: clippy
       - uses: r7kamura/rust-problem-matchers@v1
       - run: cargo +${{ matrix.rust }} clippy --all --all-features -- -D warnings
+      - run: cargo +${{ matrix.rust }} clippy --all --all-features -- -D warnings
+        working-directory: panic/abort
 
   build:
     runs-on: ubuntu-22.04
@@ -99,6 +105,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
       - uses: r7kamura/rust-problem-matchers@v1
       - run: cargo +${{ matrix.rust }} build --release
+      - run: cargo +${{ matrix.rust }} build --release
+        working-directory: panic/abort
 
   test:
     runs-on: ubuntu-22.04
@@ -136,6 +144,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
       - uses: r7kamura/rust-problem-matchers@v1
       - run: cargo +${{ matrix.rust }} doc --release --no-deps
+      - run: cargo +${{ matrix.rust }} doc --release --no-deps
+        working-directory: panic/abort
 
   coverage:
     runs-on: ubuntu-22.04
