Update CI to be n'sync with template repo
Brings in:
- pr assignment
- codeowners (actual group name)
- standardizes some naming of jobs/workflows

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,6 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 25
+  commit-message:
+    prefix: "chore(deps)"
 
   # See https://github.com/dependabot/dependabot-core/issues/2824 for doing
   # multiple directories for the same check.
@@ -13,9 +15,13 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 25
+  commit-message:
+    prefix: "chore(deps)"
 
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  commit-message:
+    prefix: "chore(deps)"
