--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,19 +14,14 @@ env:
 jobs:
   rustfmt:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        rust:
-          - nightly-2022-07-22
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: ${{ matrix.rust }}
           components: rustfmt
       - uses: r7kamura/rust-problem-matchers@v1
-      - run: cargo +${{ matrix.rust }} fmt --all -- --check
-      - run: cargo +${{ matrix.rust }} fmt --all -- --check
+      - run: cargo fmt --all -- --check
+      - run: cargo fmt --all -- --check
         working-directory: panic/abort
 
   markdown-lint:
@@ -49,7 +44,7 @@ jobs:
     # Prevent sudden announcement of a new advisory from failing ci:
     continue-on-error: ${{ matrix.checks == 'advisories' }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: EmbarkStudios/cargo-deny-action@v1
       with:
         command: check ${{ matrix.checks }}
@@ -177,6 +172,7 @@ jobs:
     needs:
       - rustfmt
       - markdown-lint
+      - deny
       - sort
       - clippy
       - build
