--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,4 +1,4 @@
-name: pr-meta
+name: pr
 
 on:
   pull_request:
@@ -15,6 +15,7 @@ jobs:
   size-label:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - uses: pascalgn/size-label-action@v0.4.3
@@ -41,4 +42,3 @@ jobs:
     - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        sync-labels: true
