--- a/deny.toml
+++ b/deny.toml
@@ -39,7 +39,7 @@ deny = [
 skip = [
     # Workaround for path only dependencies,
     # https://github.com/EmbarkStudios/cargo-deny/issues/241
-    { name = "mc-sgx-io" },
+    { name = "mc-sgx-io-untrusted" },
 ]
 skip-tree = [ ]
 
