--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
       - run: cargo fmt --all -- --check
       - run: cargo fmt --all -- --check
         working-directory: panic/abort
+      - run: cargo fmt --all -- --check
+        working-directory: panic/log
 
   markdown-lint:
     runs-on: ubuntu-22.04
@@ -60,6 +62,8 @@ jobs:
       - run: cargo sort --workspace --check >/dev/null
       - run: cargo sort --workspace --check >/dev/null
         working-directory: panic/abort
+      - run: cargo sort --workspace --check >/dev/null
+        working-directory: panic/log
 
   clippy:
     runs-on: ubuntu-22.04
@@ -83,6 +87,8 @@ jobs:
       - run: cargo +${{ matrix.rust }} clippy --all --all-features -- -D warnings
       - run: cargo +${{ matrix.rust }} clippy --all --all-features -- -D warnings
         working-directory: panic/abort
+      - run: cargo +${{ matrix.rust }} clippy --all --all-features -- -D warnings
+        working-directory: panic/log
 
   build:
     runs-on: ubuntu-22.04
@@ -107,6 +113,8 @@ jobs:
       - run: cargo +${{ matrix.rust }} build --release
       - run: cargo +${{ matrix.rust }} build --release
         working-directory: panic/abort
+      - run: cargo +${{ matrix.rust }} build --release
+        working-directory: panic/log
 
   test:
     runs-on: ubuntu-22.04
@@ -151,6 +159,8 @@ jobs:
       - run: cargo +${{ matrix.rust }} doc --release --no-deps
       - run: cargo +${{ matrix.rust }} doc --release --no-deps
         working-directory: panic/abort
+      - run: cargo +${{ matrix.rust }} doc --release --no-deps
+        working-directory: panic/log
 
   coverage:
     runs-on: ubuntu-22.04
