--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,7 @@
-* @mobilecoinfoundation/coredev
+/alloc/         @nick-mobilecoin
+/.github/       @jcape @nick-mobilecoin
+/io/            @nick-mobilecoin
+/panic/         @nick-mobilecoin
+/test_enclave/  @nick-mobilecoin
+/LICENSE        @jcape
+/*.*            @jcape
