Add poison.rs to `mc-sgx-sync` crate
Add poison.rs implementation which more or less copies from
[rust source](https://github.com/rust-lang/rust.git) at
[606c3907](https://github.com/rust-lang/rust/commit/606c3907251397a42e23d3e60de31be9d32525d5)

--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["hardware-support", "no-std"]
 keywords = ["sgx", "no-std"]
 
 [dependencies]
+mc-sgx-panic = { path = "../panic", version = "=0.1.0" }
