--- a/panic/Cargo.toml
+++ b/panic/Cargo.toml
@@ -15,5 +15,6 @@ keywords = ["sgx", "no-std", "panic"]
 log = ["dep:mc-sgx-io", "dep:mc-sgx-sync"]
 
 [dependencies]
-mc-sgx-io = { path = "../io", version = "0.1.0", optional = true }
-mc-sgx-sync = { path = "../sync", version = "0.1.0", optional = true }
+mc-sgx-io = { path = "../io", version = "=0.1.0", optional = true }
+mc-sgx-panic-sys = { path = "sys", version = "=0.1.0" }
+mc-sgx-sync = { path = "../sync", version = "=0.1.0", optional = true }
