--- a/io/Cargo.toml
+++ b/io/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mc-sgx-io"
-version = "0.1.0"
+version = "0.1.1-beta.0"
 edition = "2021"
 authors = ["MobileCoin"]
 rust-version = "1.62.1"
