--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mc-sgx-sync"
-version = "0.1.0"
+version = "0.1.1-beta.0"
 edition = "2021"
 authors = ["MobileCoin"]
 rust-version = "1.62.1"
@@ -17,5 +17,5 @@ test = false
 doctest = false
 
 [dependencies]
-mc-sgx-panic-sys = { path = "../panic/sys", version = "=0.1.0" }
+mc-sgx-panic-sys = { path = "../panic/sys", version = "=0.1.1-beta.0" }
 mc-sgx-tstdc = "0.4.1"
