--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,6 +7,8 @@ updates:
       interval: daily
     commit-message:
       prefix: "chore(deps)"
+    reviewers:
+      - "mobilecoinfoundation/coredev"
 
   - package-ecosystem: github-actions
     directory: "/"
@@ -14,6 +16,8 @@ updates:
       interval: daily
     commit-message:
       prefix: "chore(deps)"
+    reviewers:
+      - "mobilecoinfoundation/coredev"
     ignore:
       # See https://github.com/dtolnay/rust-toolchain/issues/45 tags aren't used
       # by rust-toolchain. Using a branch name will cause dependabot to suggest
