--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ exclude = [
 # We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
 resolver = "2"
 
+[workspace.package]
+authors = ["MobileCoin"]
+edition = "2021"
+license = "Apache-2.0"
+repository = "https://github.com/mobilecoinfoundation/sgx-std"
+rust-version = "1.68"
+
 [profile.release]
 lto = "thin"
 
@@ -24,11 +31,7 @@ dev-version-ext = "beta.0"
 consolidate-commits = true
 consolidate-pushes = true
 tag-name = "v{{version}}"
-
-# The file names in this key are relative to the each crate that gets released.
-# So we only need one `README.md` entry if all the README's follow a
-# common format and are always next to the Cargo.toml for their respective
-# package.
 pre-release-replacements = [
-    {file="README.md", search="mc-[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
+    # Files listed here must exist in all crates in this workspace
+    { file = "README.md", search = "mc-sgx-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
 ]
