Force git for crates.io
The nightly version used in CI doesn't support newer sparse registry
setting in 1.68. This forces CI to use the git protocol for crate io.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,10 @@ name: ci
 env:
   CARGO_INCREMENTAL: 0
   RUSTFLAGS: "-Dwarnings"
+  # This works around `dtolnay/rust-toolchain@master` it defaults to "sparse"
+  # when 1.68 is used, but the current nightly version (nightly-2023-01-04) is
+  # before the official support that doesn't use `-Z sparse`
+  CARGO_REGISTRIES_CRATES_IO_PROTOCOL: "git"
 
 jobs:
   # TODO: Fix automatically
