Use nightly for clippy
Tried to update clippy to stable and beta but it breaks on the use of
`thread_local`.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -163,8 +163,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
-          - beta
+          - nightly-2023-01-04
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
