--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -106,7 +106,7 @@ branches:
           - lint
           - "deny (bans licenses sources)"
           - sort
-          - "clippy (stable)"
+          - "clippy (nightly-2023-01-22)"
           - "build (nightly-2023-01-22)"
           - "test (nightly-2023-01-22)"
           - "coverage (nightly-2023-01-22)"
